2019-01-28  Uroš Bizjak  <ubizjak@gmail.com>

	* Makefile.in: Really regenerate.

2019-01-18  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (go_cmd_vet_files): Update for Go1.12beta2 release.
	(GOTOOLS_TEST_TIMEOUT): Increase to 600.
	(check-runtime): Export LD_LIBRARY_PATH before computing GOARCH
	and GOOS.
	(check-vet): Copy golang.org/x/tools into check-vet-dir.
	* Makefile.in: Regenerate.

2018-10-31  Joseph Myers  <joseph@codesourcery.com>

	PR bootstrap/82856
	* config/go.m4: Remove file.
	* Makefile.am (ACLOCAL_AMFLAGS): Do not use -I ./config.
	* configure.ac:  Remove AC_PREREQ.  Do not include config/go.m4.
	* Makefile.in, aclocal.m4, configure: Regenerate.

2018-09-26  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* Makefile.am (mostlyclean-local): Ignore chmod errors.
	(check-go-tool): Likewise.
	* Makefile.in: Regenerate.

2018-09-24  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (mostlyclean-local): Run chmod on check-go-dir to
	make sure it is writable.
	(check-go-tools): Likewise.
	(check-vet): Copy internal/objabi to check-vet-dir.
	* Makefile.in: Rebuild.

2018-05-09  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (check-go-tool): Don't copy zstdpkglist.go.
	* Makefile.in: Rebuild.

2018-05-04  Ian Lance Taylor  <iant@golang.org>

	PR go/85630
	* Makefile.am (CHECK_ENV): Set GOCACHE.
	(ECHO_ENV): Update for setting of GOCACHE.
	* Makefile.in: Rebuild.

2018-21-03  Uros Bizjak  <ubizjak@gmail.com>

	* Makefile.am (check-runtime): Pass -test.timeout
	with GOTOOLS_TEST_TIMEOUT.
	* Makefile.in: Rebuild.

2018-02-09  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (GOTOOLS_TEST_TIMEOUT): Double value.

2018-02-08  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (check-gccgo, check-gcc): Add options to pick up
	target libstdc++, to permit tests that use C++.
	* Makefile.in: Rebuild.

2018-01-18  Ian Lance Taylor  <iant@golang.org>

	* Makefile.am (GOTOOLS_TEST_TIMEOUT): Define.